@@ -1,26 +1,27 @@
 package Stream;
 
+import java.util.Arrays;
 import java.util.List;
 
 
 public class Methods {
     public static void main(String[] args) {
-
-        List<String> cities = List.of("Pune", "Kolkata", "Delhi","Mumbai", "Punjab");
-
-        //Filter out element whose name start with P
-        List<String> pCities = cities.stream().filter(i -> i.startsWith("P")).toList();
-        pCities.forEach(System.out::println);
-
-        //Square the list
-        List<Integer> number =List.of(11,2,3,4,5,6,7,8,9);
-        number.stream().map(i -> i*i).forEach(i -> System.out.print(i + " "));
-
-        //Sorted
-
-        number.stream().sorted().forEach(System.out::print);
-
-        //Comparator
-        System.out.println(number.stream().min((x,y)->y.compareTo(x)).get());
+//
+//        List<String> cities = Arrays.asList("Pune", "Kolkata", "Delhi","Mumbai", "Punjab");
+//
+//        //Filter out element whose name start with P
+//        List<String> pCities = cities.stream().filter(i -> i.startsWith("P")).toList();
+//        pCities.forEach(System.out::println);
+//
+//        //Square the list
+//        List<Integer> number =List.of(11,2,3,4,5,6,7,8,9);
+//        number.stream().map(i -> i*i).forEach(i -> System.out.print(i + " "));
+//
+//        //Sorted
+//
+//        number.stream().sorted().forEach(System.out::print);
+//
+//        //Comparator
+//        System.out.println(number.stream().min((x,y)->y.compareTo(x)).get());
     }
 }
